<resources>
    <string name="app_name">m08uf2x01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="placeholder_text">(PlaceHolder)</string>
    <string name="sensor_proximity">Sensor_Proximity</string>
    <string name="sensor_temperatura">Sensor_Temperatura</string>
    <string name="sensor_ambient_temperatura">Sensor_Ambient_Temperatura</string>
    <string name="iniciar_audio">Iniciar audio</string>
    <string name="pausar">Pausar</string>
    <string name="continuar">Continuar</string>
    <string name="detener">Detener</string>
    <string name="no_reproducir_en_forma_circular">No reproducir en forma circular</string>
    <string name="escribir_texto">Escribir texto</string>

    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>

</resources>