<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ex5.Ejercicio5Activity">

    <EditText
        android:id="@+id/txTextoToVoz"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/escribir_texto"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnStartAudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txTextoToVoz"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnPauseAudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pausar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartAudio" />

    <Button
        android:id="@+id/btnContinueAudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPauseAudio" />

    <Button
        android:id="@+id/btnStopAudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detener"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContinueAudio" />

    <Button
        android:id="@+id/btnLoopAudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_reproducir_en_forma_circular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStopAudio" />

</androidx.constraintlayout.widget.ConstraintLayout>